Feat/add error responses (#32)
* Add ValidationErrorResponse schema

* Add 404 errors

--- a/docs/accounts.yaml
+++ b/docs/accounts.yaml
@@ -20,6 +20,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountResponseBody'
+        '400':
+          description: The data provided in the request body is incomplete or invalid. Refer to the returned validation errors for more details.
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas.yaml#/components/schemas/ValidationErrorResponse'
       tags:
         - Accounts
   /accounts/{accountId}:
@@ -41,6 +47,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountResponseBody'
+        '404':
+          description: The Account with the specified ID does not exist
       tags:
         - Accounts
 
