--- a/docs/savers.yaml
+++ b/docs/savers.yaml
@@ -100,6 +100,53 @@ components:
           type: object
           allOf:
             - $ref: '#/components/schemas/Address'
+        sourceAccountDetails:
+          type: object
+          allOf:
+            - $ref: '#/components/schemas/SourceAccountDetails'
+        employment:
+          type: object
+          properties:
+            industry:
+              type: string
+              enum: ['marketing-advertising-and-pr','sales','law','hospitality-and-events-management','personal-care-and-lifestyle','creative-arts-and-design','information-technology','environment-and-agriculture','media-and-internet','healthcare','property-and-construction','public-services-and-administration','law-enforcement-and-security','engineering-and-manufacturing','energy-and-utilities','recruitment-and-hr','teacher-training-and-education','leisure-sport-and-tourism','business-consulting-and-management','charity-and-not-for-profit-organizations','transport-and-logistics','science-and-pharmaceuticals','social-care','accountancy-banking-and-finance','retail-and-wholesale','social-and-humanities-scientists']
+              description: The industry that the Saver works in
+              example: 'marketing-advertising-and-pr'
+            occupation:
+              type: string
+              enum: ['marketer','fundraising-and-research','sales-manager','pr','sales','customer-service','exporter','market-researcher','importer','buyer','advocate','solicitor','judge','clerk','conveyancer','barrister','paralegal','butcher','bar-manager','caterer','events-manager-or-organiser','barista','bartender','restaurant-worker','restaurant-owner','chef','fishmonger','hotel-worker','take-away-shop','nail-technician','hairdresser','salon-owner','nutritionist','aesthetician','salon-manager','sex-worker','disc-jockey','creative-director','dancer','illustrator','graphic-designer','interpreter-or-translator','jewellery-designer','tattoo-artist-or-piercer','sound-engineer','design-engineer','set-and-production-designer','fashion-stylist','artist','costumer','musician','adult-film-actor','product-designer','writer','editor','photographer','choreographer','copywriter','clothing-designer','film-director-or-producer-or-editor','theatre-manager','media-and-broadcasting','actor','web-designer','software-engineer','hardware-engineer','software-tester','street-cleaner','racehorse-trainer','scrap-metal-dealer','farmer','public-health-inspection','environmental-health-officer','forest-manager','conservation-worker','food-inspector','florist','refuse-disposal','social-media-influencer','printer','journalist','blogger','publisher','adult-content-creator','optician','chief-medical-officer','doctor-or-surgeon','veterinary-nurse','massage-therapist','health-manager','psychiatrist-or-therapist-or-psychologist','veterinarian','dietician','physiotherapist','nurse','paramedic','sports-therapist','dentist','speech-and-language-therapist','alternative-and-complementary-medicine-practitioner','handyperson','construction-worker','architect','landlord','electrician','builder','carpenter','plasterer','building-services-manager','joiner','landscaper-or-groundsperson','structural-engineer','bricklayer','plumber','painter','facilities-manager','property-manager','letting-agent','construction-manager','roofer','surveyor','estate-agent','site-engineer','civil-servant','policy-adviser','politician','customs-officer','police-officer','probation-office','forensic-psychologist','firefighter','security-guard','prison-services-professional','crime-analyst','apparel-and-fashion-professional','avionics','civil-engineer','mechanical-engineer','aviation-and-mechanical-technician','metal-worker','electrical-engineer','industrial-engineer','metal-and-steel-worker','glass-and-glazing-professional','precision-instrument-worker','manufacturing-operations','quality-professional','chemical-engineer','boilerman','sewage-works-plant-operator','quarry-manager','water-and-energy-engineer','electricity-supplier-plant-operator','electricity-supplier-installation-engineer','miner','drilling-engineer','water-treatment-controller','careers-adviser','talent-manager','recruiter','people-operations','lecturer-or-professor','teacher','dance-teacher','librarian','teaching-assistant','school-inspector','curator','conservator','special-needs-coordinator','education-officer','archivist','educational-establishment-administrator','driving-instructor','nanny-or-au-pair-or-child-minder','airport-worker','pilot-or-flight-attendant','professional-athlete','travel-agency-owner','personal-trainer','entrepreneur','compliance-manager','management-consultant','project-manager','office-manager','product-manager','personal-assistant-or-secretary','fundraiser-or-development-officer','senior-management','advocacy-officer-or-policy-analyst-or-campaign-manager','warehouse-worker','taxi-driver','transport-manager','supply-chain-manager','long-haul-trucker','warehouse-manager','bus-driver','delivery-person','scientist','researcher','technician','chemist','pharmacy-manager','pharmacist','pharmaceutical-manufacturer','drugs-and-alcohol-counsellor','psychiatric-social-worker','social-services-manager','care-manager','day-centre-manager','childrens-guardian','social-worker','youth-worker','foster-carer','rehabilitation-officer','nursing-home-owner','welfare-services-counsellor','stockbroker','finance-director','stock-trader','debt-advisor','book-keeper','chief-financial-officer','tax-advisor','investment-advisor','accountant','mortgage-advisor','auditor','hedge-fund-manager','foreign-exchange-dealer','banker','financial-advisor','relationship-manager','insurance-manager','wholesale-manager','shop-owner','retail-trade-manager','betting-shop-manager','newsagent','shopkeeper','antiques-dealer','betting-shop-owner','fashion-retailer','purchaser','car-dealer','geographer','epidemiologist','archaeologist','criminologist','social-scientist','political-scientist','historian','anthropologist']
+              description: The job title of the Saver
+              example: 'marketer'
+            status:
+              type: string
+              enum: ['employed','retired','self-employed','unemployed']
+              description: The employment status of the Saver
+              example: 'employed'
+            income:
+              type: object
+              properties:
+                currency:
+                  type: string
+                  enum: ['GBP']
+                  description: The currency of the Saver's income in ISO 4217 format.
+                value:
+                  type: number
+                  minimum: 0.01
+                  multipleOf: 0.01
+                  example: 54321.09
+              required:
+                - currency
+                - value
+          required:
+            - industry
+            - occupation
+            - status
+            - income
+        sourceOfFunds:
+            type: string
+            enum: ['gambling-or-lottery','investments','property-or-asset-sale','business-income','savings','salary-or-bonus','student-loans-or-bursary','retirement-or-pension','legal-settlement','family-or-gifted','loan','inheritance']
+            example: 'salary-or-bonus'
+            description: The nature of the money being used to fund the Bank Account
         taxResidency:
           type: string
           enum: ['GB']
@@ -162,10 +209,13 @@ components:
           - dateOfBirth
           - mobileNumber
           - address
+          - sourceAccountDetails
           - taxResidency
           - termsAgreed
           - summaryBoxViewed
           - fscsSheetViewed
+          - employment
+          - sourceOfFunds
 
     SaverResponseBody:
       allOf:
@@ -180,4 +230,25 @@ components:
     SaverUpdateBody:
       allOf:
         - $ref: '#/components/schemas/Saver'
+    
+    SourceAccountDetails:
+      type: object
+      description: This bank account is where Withdrawal Transactions will be paid to
+      properties:
+        accountNumber:
+          type: string
+          example: '11223344'
+          description: The bank account number of the Saver
+        sortCode:
+          type: string
+          example: 60-83-71
+          description: The sort code of the Saver's bank account
+        accountOwner:
+          type: string
+          example: Christopher Robin
+          description: The name on the Saver's bank account
+      required:
+        - accountNumber
+        - sortCode
+        - accountOwner
       
