Added pauseUntil property to update commitment request (#58)
* Added pauseUntil property to update commitment request

* Updated pauseUntil to pausedUntil

--- a/docs/commitments.yaml
+++ b/docs/commitments.yaml
@@ -118,6 +118,11 @@ components:
               type: string
               example: 671b7c2b3f541ccb827b7c0a
               description: The unique identifier of the Commitment
+            pausedUntil:
+              type: string
+              format: date
+              example: '2025-12-31'
+              description: The date of when the commitment will be unpaused. Dates in the past are treated as unpaused.
         - $ref: '#/components/schemas/Commitment'
         - $ref: 'schemas.yaml#/components/schemas/Dates'
 
@@ -144,6 +149,11 @@ components:
           multipleOf: 0.01
           example: 67.89
           description: The amount the Saver wants to pay into their Account
+        pausedUntil:
+          type: string
+          format: date
+          example: '2025-12-31'
+          description: The date of when the commitment will be unpaused. Dates in the past will automatically unpaused commitments.
 
     CommitmentSearchResult:
       type: object
